; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-x-data.c_set_hash.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-x-data.c_set_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.item = type { i32 }

@ONLY_FIND = common dso_local global i32 0, align 4
@FLAG_DELETED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64)* @set_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_hash(i64 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.item*, align 8
  %7 = alloca %struct.item*, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load i64, i64* %4, align 8
  %9 = load i32, i32* @ONLY_FIND, align 4
  %10 = call %struct.item* @get_item_f(i64 %8, i32 %9)
  store %struct.item* %10, %struct.item** %6, align 8
  %11 = load i64, i64* %4, align 8
  %12 = call i64 @get_idx_item(i64 %11)
  %13 = inttoptr i64 %12 to %struct.item*
  store %struct.item* %13, %struct.item** %7, align 8
  %14 = load %struct.item*, %struct.item** %7, align 8
  %15 = icmp ne %struct.item* %14, null
  br i1 %15, label %16, label %25

16:                                               ; preds = %2
  %17 = load %struct.item*, %struct.item** %7, align 8
  %18 = load i64, i64* %5, align 8
  %19 = call i32 @set_hash_item(%struct.item* %17, i64 %18)
  %20 = load %struct.item*, %struct.item** %6, align 8
  %21 = icmp ne %struct.item* %20, null
  %22 = xor i1 %21, true
  %23 = zext i1 %22 to i32
  %24 = call i32 @assert(i32 %23)
  store i32 1, i32* %3, align 4
  br label %40

25:                                               ; preds = %2
  %26 = load %struct.item*, %struct.item** %6, align 8
  %27 = icmp ne %struct.item* %26, null
  br i1 %27, label %28, label %35

28:                                               ; preds = %25
  %29 = load %struct.item*, %struct.item** %6, align 8
  %30 = getelementptr inbounds %struct.item, %struct.item* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* @FLAG_DELETED, align 4
  %33 = and i32 %31, %32
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %28, %25
  store i32 0, i32* %3, align 4
  br label %40

36:                                               ; preds = %28
  %37 = load %struct.item*, %struct.item** %6, align 8
  %38 = load i64, i64* %5, align 8
  %39 = call i32 @set_hash_item(%struct.item* %37, i64 %38)
  store i32 1, i32* %3, align 4
  br label %40

40:                                               ; preds = %36, %35, %16
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local %struct.item* @get_item_f(i64, i32) #1

declare dso_local i64 @get_idx_item(i64) #1

declare dso_local i32 @set_hash_item(%struct.item*, i64) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
